# primitive_bd

./: .gitignore  Makefile  README.md  pyproject.toml
src/: constants.py  decorators.py
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
