[tool.poetry]
name = "project2-naydanov-leonid"
version = "0.1.0"
description = ""
authors = ["Leonid Naydanov <najdanov.2020@stud.nstu.ru>"]
readme = "README.md"

packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)"
]
